# Code-Projects

./: Gnuplot - Shortcut.lnk  data.json  days-count.py  facebook.py  leetcode.py  legendre.cpp  lin-diff-sys.py  mkt-metrics.ipynb  projectile_2.py  pytorch.py  rna-decoder.py  social.py  test.cpp  test.ipynb  test.py  ubahn.cpp
Arduino/OLED/: OLED.ino
Gnuplot/: data.csv  plot.plt
Gnuplot/AM-Radio/: data.csv  plot.plt  receiver.py
Gnuplot/DampedOsci/: data.csv  plot.plt
Gnuplot/ForcedOsci/: data.csv  forcedosci.py  plot.plt
Gnuplot/Laser/: data.csv  laser.plt
Gnuplot/LaserDiode/: data101.csv  data102.csv
Gnuplot/LinearRegression/: data.csv  plot.plt
Gnuplot/Lockin-Amp/: data.csv  fft.py  fft_data.csv  fft_data_full.csv  lockin.eps  lockin.tex  plot-fft.plt  plot.plt  plot.py
Gnuplot/OpAmps/: data1.csv  data10.csv  data11.csv  data2.csv  data5.csv  data6.csv  data8.csv  data9.csv  plot.plt
Gnuplot/RLC/: Qequal.eps  Qequal.plt  Qequal.tex  Qlarge.eps  Qlarge.plt  Qlarge.tex  Qlow.eps  Qlow.plt  Qlow.tex  RLC-AC.py  RLC1.eps  RLC1.tex  RLC2.eps  RLC2.tex  data.csv  plot-AC.plt  resonance.eps  resonance.plt  resonance.tex
Gnuplot/Rail-splitter/: data-off.csv  data-on.csv  plot-off-linear.plt  plot-off.plt  plot-on.eps  plot-on.plt
Gnuplot/Signal-Filter/: RC-Hochpass-1.py  bode-gain.plt  (+18 more)
Matlab/: Symmetric_Top_Friction.m  raman.asv  raman.m
Project C++/: blatt10  blatt10.cpp  factorial.cpp  fibonacci  fibonacci.cpp  prime.cpp  test  test.cpp
Project C++/Capacitor/: CMakeLists.txt
Project C++/Capacitor/src/: main.cpp  simulator.cpp  simulator.h  visualization.cpp  visualization.h
Project C++/Decay/: CMakeLists.txt  main.cpp
Project C++/Magnetic-Bottle/: CMakeLists.txt  Electron.cpp  Electron.h  MagneticField.cpp  MagneticField.h  Renderer.cpp  Renderer.h  Simulation.cpp  Simulation.h  Vector3.h  main.cpp
Project C++/Orbit/: CMakeLists.txt  asteroid  flyby  flyby.cpp  math  math.cpp  simulation  simulation.cpp  solarsystem  solarsystem.cpp  spaghetti  spaghetti.cpp  test  test.cpp
Project Python/: bremsstrahlung.py  diffusion.py  effusion.py  electrostatics.py  fibonacci.py  finite_difference.py  kepler.py  maxwell.py  orbit.py  pn_diffusion_final.csv  projectile.py  projectile_2.py  radioactive_decay.py  symmetric_top.py  xray.py
(+606 files in other folders)
